--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -7,35 +7,51 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/eventNameTextView"
+        android:id="@+id/textViewEventName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Event Name"
         android:textSize="24sp"
-        android:textStyle="bold"
+        android:textColor="@android:color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"/>
 
     <TextView
-        android:id="@+id/eventDetailsTextView"
+        android:id="@+id/textViewEventLocation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Event Details"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/eventNameTextView"
+        android:text="Event Location"
+        android:textSize="18sp"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/textViewEventName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginBottom="16dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/participantsRecyclerView"
+    <TextView
+        android:id="@+id/textViewEventTime"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/eventDetailsTextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:text="Event Time"
+        android:textSize="18sp"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/textViewEventLocation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/textViewEventParticipants"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Participants"
+        android:textSize="18sp"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/textViewEventTime"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
